# AfriFlow

./: .pre-commit-config.yaml  PROGRESS_REPORT.md  README.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md
afriflow/: .gitignore  COMPLETE_FILE_STRUCTURE.md  CRITICAL_ITEMS_COMPLETION_REPORT.md  DISCLAIMER.md  EXECUTION_SUMMARY.md  FINAL_INTEGRATION_AUDIT_REPORT.md  FINAL_PRODUCTION_REPORT.md  INTEGRATION_AUDIT_REPORT.json  Makefile  PRODUCTION_PROMPT.md  PRODUCTION_READINESS.md  README-gating-framework.md  README.md  TEST_REPORT.md  __init__.py  coverage.json  exceptions.py  logging_config.py  pyproject.toml  pyproject.toml.bak  requirements-dev.txt
afriflow/alerting/: __init__.py  currency_event_alert_engine.py  fx_advisor_alert_engine.py  insurance_broker_alert_engine.py  outcome_tracker.py  pbb_branch_alert_engine.py  rm_alert_engine.py  salesforce_integration.py
afriflow/client_briefing/: __init__.py  audit_report.json  audit_report.md  briefing_generator.py  client_briefing.clean_manifest.sha256  validation_command.sh
afriflow/config/: __init__.py  benchmark_baselines.json  benchmark_suites.json  corridor_config.yml  coverage_gates.json  currency_thresholds.yml  data_shadow_rules.yml  defaults.yml  expansion_thresholds.yml  lekgotla_config.yml  loader.py  moderation_patterns.yml  seasonal_weights.yml  settings.py  signal_thresholds.yml  sim_deflation.yml  sim_deflation_factors.yml
afriflow/corridor/: __init__.py  corridor_engine.py  formal_vs_informal.py  leakage_detector.py  revenue_attribution.py
afriflow/coverage/: README.md  coverage_audit.md  (+7 more)
(+469 files in other folders)
