[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afriflow"
version = "0.1.0"
description = "A pan-African financial data platform simulation and analytics engine."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gemini CLI", email = "gemini@example.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "faker>=19.0.0",
    "confluent-kafka>=2.2.0",
    "fastavro>=1.8.0",
    "thefuzz>=0.19.0",
    "python-levenshtein>=0.21.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["afriflow*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=domains --cov-report=term-missing --cov-fail-under=80"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
